--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Modernist theme
-description: Modernist is a theme for GitHub Pages.
+title: ENGINEERING SCIENCES E123
+description: Laboratory Electronics: Digital Circuit Design | Ken Michalek
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-modernist
