--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ENGINEERING SCIENCES E123
-description: Digital Circuit Design
+description: Laboratory Electronics\: Digital Circuit Design
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-modernist
